--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,23 @@ services:
       timeout: 10s
       retries: 5
 
-  # 3. TheHive 5 (The Application)
+  # 3. Cortex (Analysis Engine)
+  cortex:
+    image: thehiveproject/cortex:3.1.8
+    container_name: cortex
+    restart: unless-stopped
+    depends_on:
+      elasticsearch:
+        condition: service_healthy
+    ports:
+      - "9001:9001"
+    environment:
+      - job_directory=/opt/cortex/jobs
+    volumes:
+      - cortexdata:/opt/cortex/jobs
+      - /var/run/docker.sock:/var/run/docker.sock
+
+  # 4. TheHive 5 (The Application)
   thehive:
     image: strangebee/thehive:5.4
     container_name: thehive
@@ -41,6 +57,8 @@ services:
         condition: service_healthy
       elasticsearch:
         condition: service_healthy
+      cortex:
+        condition: service_started
     ports:
       - "9000:9000"
     environment:
@@ -61,9 +79,14 @@ services:
       - elasticsearch
       - --secret
       - "SuperSecretKeyForTheHive2026RiskEngine!"
+      - --cortex-hostnames
+      - cortex
+      - --cortex-port
+      - "9001"
 
 volumes:
   cassandradata:
   elasticsearchdata:
   thehivedata:
   thehiveconfig:
+  cortexdata:
