Add env example, update docs, and use env secret
Added .env.example for environment variable configuration and .gitignore to exclude sensitive and development files. Updated README with setup instructions, including environment variable configuration and service diagram. Modified docker-compose.yml to use THEHIVE_SECRET from the .env file instead of a hardcoded value.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -78,7 +78,7 @@ services:
       - --es-hostnames
       - elasticsearch
       - --secret
-      - "SuperSecretKeyForTheHive2026RiskEngine!"
+      - "${THEHIVE_SECRET:?THEHIVE_SECRET must be set in .env file}"
       - --cortex-hostnames
       - cortex
       - --cortex-port
