Add SOC Risk Engine service and CLI
Introduce a new risk_engine package that implements a SOC Risk Engine: TheHive and Cortex REST clients, data models, risk calculator, markdown reporter, configuration loader, and a CLI entrypoint supporting `score` and `watch` modes. Add a Dockerfile and service requirements, update the top-level requirements for the service, expand .env.example with TheHive/Cortex and engine settings, and include a commented docker-compose service for easy integration. This enables automated quantitative risk scoring of TheHive cases and posting of reports back to TheHive.

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,21 @@
 # TheHive secret key for session encryption
 # Generate with: openssl rand -base64 32
 THEHIVE_SECRET=your-secret-key-here
+
+# ---------------------------------------------------------------------------
+# Risk Engine Settings
+# ---------------------------------------------------------------------------
+
+# TheHive 5 API connection
+THEHIVE_URL=http://localhost:9000
+THEHIVE_API_KEY=your-thehive-api-key-here
+
+# Cortex API connection
+CORTEX_URL=http://localhost:9001
+CORTEX_API_KEY=your-cortex-api-key-here
+
+# Default asset value in USD (used when case has no asset:* tag)
+DEFAULT_ASSET_VALUE=50000
+
+# Watch-mode polling interval in seconds
+WATCH_INTERVAL=30
